manifests/service-1.yml
apiVersion: v1
kind: Service
metadata:
    name: "uclkedaaks-1dda"
    labels:
        app: "uclkedaaks-1dda"
spec:
    type: LoadBalancer
    ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
    selector:
        app: "uclkedaaks-1dda"
